SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Ocean_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_ID__c</fullName>
        <label>ADO ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADO_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADO Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ocean_request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AWSInstances__c</fullName>
        <label>AWS Resources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VPC</fullName>
                </value>
                <value>
                    <fullName>EC2</fullName>
                </value>
                <value>
                    <fullName>EBS</fullName>
                </value>
                <value>
                    <fullName>ELB</fullName>
                </value>
                <value>
                    <fullName>RDS</fullName>
                </value>
                <value>
                    <fullName>RDS Backup Storage</fullName>
                </value>
                <value>
                    <fullName>EFS</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
                <value>
                    <fullName>Data Transfer</fullName>
                </value>
                <value>
                    <fullName>Redshift</fullName>
                </value>
                <value>
                    <fullName>EMR</fullName>
                </value>
                <value>
                    <fullName>DynamoDB</fullName>
                </value>
                <value>
                    <fullName>Workspaces</fullName>
                </value>
                <value>
                    <fullName>Quicksight</fullName>
                </value>
                <value>
                    <fullName>Lambda</fullName>
                </value>
                <value>
                    <fullName>Other Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Approved_by_CRMT__c</fullName>
        <label>Amount Approved By CRMT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Funded_To_CSP__c</fullName>
        <label>Amount Funded To CSP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Name</label>
        <referenceTo>Applications__c</referenceTo>
        <relationshipName>ocean_requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Acronym__c</fullName>
        <label>Application Acronym</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <inlineHelpText>Document any assumptions related to your application and this cloud resource request you would like to share with the Cloud Resource Management Team.</inlineHelpText>
        <label>Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSP_Option_Year__c</fullName>
        <label>CSP Option Year</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_CSP_Option_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Service_Provider_Project_Number__c</fullName>
        <label>Cloud Service Provider Project Number</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approved_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Approved Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MonthsInPoP__c</fullName>
        <label>Months In Period Of Performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Additional_Funding_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Additional Funding Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_AWS_Accounts__c</fullName>
        <label>Number of AWS Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCEAN_REQUEST_ID__c</fullName>
        <displayFormat>OCEAN-{00000}</displayFormat>
        <label>OCEAN_REQUEST_ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OY_End_Date__c</fullName>
        <formula>ApplicationName__r.Option_Year_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OY End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OY_Start_Date__c</fullName>
        <formula>ApplicationName__r.Option_Year_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OY Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ocean_Wave__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ocean Wave</label>
        <referenceTo>Ocean_Wave__c</referenceTo>
        <relationshipLabel>ocean_requests</relationshipLabel>
        <relationshipName>ocean_requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option_Year_End_Date__c</fullName>
        <label>Option Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option_Year_Start_Date__c</fullName>
        <label>Option Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option_Year__c</fullName>
        <label>Option Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PeriodOfPerformance__c</fullName>
        <label>Period Of Performance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <label>Project_Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Months_in_OY__c</fullName>
        <formula>ApplicationName__r.Remaining_Months_in_OY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Months in OY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>COR/GTL Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted to CRMT</fullName>
                </value>
                <value>
                    <fullName>Initial Review Complete</fullName>
                </value>
                <value>
                    <fullName>ROM Requested</fullName>
                </value>
                <value>
                    <fullName>ROM Received</fullName>
                </value>
                <value>
                    <fullName>ROM Reviewed</fullName>
                </value>
                <value>
                    <fullName>RFP Requested</fullName>
                </value>
                <value>
                    <fullName>RFP Received</fullName>
                </value>
                <value>
                    <fullName>RFP Reviewed</fullName>
                </value>
                <value>
                    <fullName>RFP Accepted</fullName>
                </value>
                <value>
                    <fullName>ADO Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>CRMT Intake Review</fullName>
                </value>
                <value>
                    <fullName>Attestation Requested</fullName>
                </value>
                <value>
                    <fullName>CRMT Intake Review Completed</fullName>
                </value>
                <value>
                    <fullName>ROM Approved</fullName>
                </value>
                <value>
                    <fullName>RFP Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Notes__c</fullName>
        <label>Review Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Amount__c</fullName>
        <label>Total Estimated Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Cost__c</fullName>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wave_Submitted__c</fullName>
        <label>Wave Submitted</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <inlineHelpText>The &quot;Wave&quot; is the submission period the Cloud Resources Management Team uses to manage Cloud Resource Requests from application teams.  Applications can only submit one cloud resource request per Wave.</inlineHelpText>
        <label>Wave</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Waves</valueSetName>
        </valueSet>
    </fields>
    <label>Ocean Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ADO_Name__c</columns>
        <columns>CSP_Option_Year__c</columns>
        <columns>Cloud_Service_Provider_Project_Number__c</columns>
        <columns>Wave_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ocean_Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ocean_requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>